k8s/manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nttdata
  labels:
    app: nttdata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nttdata
  template:
    metadata:
      labels:
        app: nttdata
    spec:
      containers:
        - name: nttdata
          image: nttdata:placeholder
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "150m"
              memory: "384Mi"
            limits:
              cpu: "750m"
              memory: "768Mi"
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
