k8s/manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
spec:
  selector:
    app: ${APP_NAME}
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
